fix step alignment issue on small viewports
also fixes an issue where some links were being clipped on smaller view ports.

--- a/packages/app/client/src/ui/editor/welcomePage/welcomePage.scss
+++ b/packages/app/client/src/ui/editor/welcomePage/welcomePage.scss
@@ -20,10 +20,6 @@
   a {
     color: var(--focused-selected-list-item-bg);
     min-width: 0;
-    overflow: hidden;
-    text-decoration: none;
-    text-overflow: ellipsis;
-    white-space: nowrap;
   }
 
   ul {
@@ -189,6 +185,7 @@
         height: 38px;
         margin-right: 15px;
         width: 38px;
+        flex-shrink: 0;
 
         > div {
           background-repeat: no-repeat;
